--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://developerfolio.js.org/",
-  "name": "developerfolio",
+  "homepage": "https://vaibhav-nagre.github.io/nagre/",
+  "name": "nagreFolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
